fixed drag visibility

--- a/www/views/Extjs3/themes/Paper/src/_ext.scss
+++ b/www/views/Extjs3/themes/Paper/src/_ext.scss
@@ -2159,6 +2159,7 @@ $menuScrollerSize : dp(4);
 
 .x-panel-ghost {
 	@extend .z24;
+	visibility:visible;
 	background-color:white;
 }
 
